test/corpus/all.txt
=========
all
=========
{# a comment #}
{% local nelt = require "path.to.nelt" %}
{% local function test(tp: *nelt.Template, str: string) %}
  {{ "<escaped val>" }}
  text
  <h1>hello world</h1>
  {{ str }}
  {{- "<unescaped val>" }}
{% end %}
{% return test %}

---

(template
  (nelt_comment
    (nelt_comment_body))
  (content)
  (nelt_tags
    (nelt_expr
      (expr)))
  (content)
  (nelt_tags
    (nelt_expr
      (expr)))
  (content)
  (nelt_tags
    (nelt_val
      (val)))
  (content)
  (nelt_tags
    (nelt_val
      (val)))
  (content)
  (nelt_tags
    (nelt_val
      (val)))
  (content)
  (nelt_tags
    (nelt_expr
      (expr)))
  (content)
  (nelt_tags
    (nelt_expr
      (expr)))
  (content))

